--- a/style.css
+++ b/style.css
@@ -28,10 +28,8 @@ body.dark {
 }
 
 /* user-select -> Impedir a seleção de texto de um elemento <div> */
-label {
-  background-color: black;
-  width: 30px;
-  height: 30px;
+label:before {
+  content: "🌙";
   display: inline-block;
   border-radius: 60%;
   cursor: pointer;
@@ -39,8 +37,8 @@ label {
   transition: 0.5s linear;
 }
 
-body.dark label {
-  background-color: white;
+body.dark label:before {
+  content: "☀️"
 }
 
 input {
